# quick-dirty-scripts

./: .gitignore
.github/workflows/: vgnc-uniprot-backfill-ci.yml
vgnc-uniprot-backfill/: .env.example  .gitignore  README.md  docker-compose.mysql-test.yml  pyproject.toml  ruff.toml
vgnc-uniprot-backfill/scripts/: run-db-integration-tests.sh
vgnc-uniprot-backfill/src/vgnc_uniprot_backfill/: __init__.py  __main__.py  db.py  ensembl.py  models.py  pipeline.py  report.py
vgnc-uniprot-backfill/tests/: test_cli.py  test_cli_integration.py  test_db.py  test_db_unit.py  test_ensembl.py  test_models.py  test_pipeline.py  test_report.py  vgnc_public_test_data_and_schema.sql
